--- a/PlistProxy/manifest.plist
+++ b/PlistProxy/manifest.plist
@@ -12,7 +12,7 @@
 					<string>software-package</string>
 					<key>url</key>
                     <!-- 替换自己的ipa地址 -->
-					<string>http://package.develop.com/test.ipa</string>
+					<string>http://192.168.21.186/test.ipa</string>
 				</dict>
 			</array>
 			<key>metadata</key>
